syntax = "proto3";

package pb;

service MessageService {
    rpc QueryMessagesInRange(QueryMessagesInRangeRequest) returns (QueryMessagesInRangeReply);
    rpc SendMessage(SendMessageRequest) returns (SendMessageReply);
}


message QueryMessagesInRangeRequest {
    string chatroomID = 1;
    string startID = 2;
    string endID = 3;
}

message QueryMessagesInRangeReply {
    repeated Message messages = 1;
}

message SendMessageRequest {
    string chatroomID = 1;
    string username = 2;
    string content = 3;
}

message SendMessageReply {
    Message message = 1;
}


message Message {
    string id = 1;
    string chatroomID = 2;
    string username = 3;
    string content = 4;
}